gitlab-postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-postgresql
  labels:
    app: gitlab
spec:
  ports:
    - port: 5432
      name: postgres
      targetPort: postgres
  selector:
    app: gitlab
    tier: postgresql
  clusterIP: None
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: gitlab-postgresql
  labels:
    app: gitlab
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitlab
        tier: postgresql
    spec:
      containers:
      - image: sameersbn/postgresql:10
        name: postgresql
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgresql-persistent-storage
          mountPath: /var/lib/postgresql
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -h
            - localhost
            - -U
            - postgres
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -h
            - localhost
            - -U
            - postgres
          initialDelaySeconds: 5
          timeoutSeconds: 1
      volumes:
      - name: postgresql-persistent-storage
        persistentVolumeClaim:
          claimName: gitlab-postgresql-pv-claim
