gitlab-registry.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: gitlab
  name: gitlab-registry
  labels:
    app: gitlab
spec:
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30500
      name: http
  selector:
    app: gitlab
    tier: registry
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  namespace: gitlab
  name: gitlab-registry
  labels:
    app: gitlab
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitlab
        tier: registry
    spec:
      containers:
      - image: registry:2
        name: registry
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: http
        volumeMounts:
          - name: image-store
            mountPath: "/var/lib/registry"
      volumes:
        - name: image-store
          emptyDir: {}
