gitlab-ingress-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: gitlab
  name: ingress-gitlab-http
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: gitlab.gchevalley.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab-ce
          servicePort: 80
