gitlab-ingress-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: gitlab
  name: ingress-gitlab-https
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: ca-clusterissuer
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "256m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120s"
spec:
  tls:
  - hosts:
    - gitlabs.gchevalley.tech
    secretName: gitlabs-gchevalley-service-tls
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: gitlabs.gchevalley.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab-ce
          servicePort: 80
