gitlab-registry-ingress-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: gitlab
  name: ingress-gitlab-registry-http
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
  - host: registry.gchevalley.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab-registry
          servicePort: 5000
